--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <DOCTYPE html>
 <html>
 <head>
-<title>ZZALLEGRO</title>
+<title>Związek Zawodowy Pracowników Allegro</title>
 </head>
 <body>
-<h1>ZZALLEGRO</h1>
+<h1>Związek zawodowy pracowników Allegro - strona w budowie</h1>
+<p>Jeśli masz sprawę już dziś, pisz na <code>komisjazzallegro@gmail.com</code>.</p>
 </body>
 </html>
