--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Związek Zawodowy Pracowników Allegro</title>
 </head>
 <body>
-<h1>Związek zawodowy pracowników Allegro - strona w budowie</h1>
+<h1>Związek Zawodowy Pracowników Allegro - strona w budowie</h1>
 <p>Jeśli masz sprawę już dziś, pisz na <code>komisjazzallegro@gmail.com</code>.</p>
 </body>
 </html>
